# robot_lab

./: README.md
model/xjqr/: board.usd
model/xjqr/4LEGS/: CMakeLists.txt  package.xml
model/xjqr/4LEGS/config/: joint_names_4LEGS.yaml
model/xjqr/4LEGS/launch/: gazebo.launch
model/xjqr/4LEGS/meshes/: FL_Link6.STL  FR_Wheel1.STL  FR_Wheel2.STL  RL_Link1.STL  RL_Link6.STL  RL_Wheel1.STL  RL_Wheel2.STL  RR_Link1.STL  RR_Link6.STL
model/xjqr/4LEGS/urdf/: 4LEGS.csv
model/xjqr/4LEGS/urdf/4LEGS_1/: 4LEGS_1.usd
model/xjqr/board/: CMakeLists.txt
model/xjqr/board/meshes/: base_link.STL
model/xjqr/board/urdf/: board.urdf
model/xjqr/scripts/: inverse.py  inverse_notrajectory.py  inverse_sim.py  test1.py  twoleg_foot_control.py  twoleg_foot_control_joint.py
model/xjqr/twoleg_foot_5J/: package.xml
model/xjqr/twoleg_foot_5J/config/: joint_names_twoleg_foot_5J.yaml
model/xjqr/twoleg_foot_5J/urdf/: twoleg_foot_5J.csv
model/xjqr/twoleg_foot_5J/urdf/twoleg_foot_5J/: twoleg_foot_5J.usd
model/xjqr/twoleg_foot_5J/urdf/twoleg_foot_5J/configuration/: twoleg_foot_5J_physics.usd  twoleg_foot_5J_sensor.usd
model/xjqr/twoleg_foot_link/: package.xml
model/xjqr/twoleg_foot_link/config/: joint_names_twoleg_foot_link.yaml
model/xjqr/twoleg_foot_link/launch/: gazebo.launch
model/xjqr/twoleg_foot_link/meshes/: Left_Foot.STL  Right_Foot.STL  Right_Link1.STL  Right_Link6.STL  base_link.STL
model/xjqr/twoleg_foot_link/urdf/: twoleg_foot_link.urdf
scripts/rsl_rl/base/: play.py
source/robot_lab/robot_lab/assets/: __init__.py  unitree.py  xjqr.py
(+42 files in other folders)
